Fixed dark mode

--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@ input[type="submit"] {
   align-items: center;
   font-family: 'Open Sans', sans-serif;
   gap: 2vw;
+  opacity: 0.9;
 }
 
 #topbar button {
@@ -383,7 +384,8 @@ input[type="submit"] {
   scrollbar-color: rgba(211, 211, 211, 0.404) rgba(255, 255, 255, 0), 0);
   background-size: cover;
   background-repeat: no-repeat;
-  opacity: 0.90;
+  opacity: 0.7;
+  backdrop-filter: blur(30px);
 }
 
 .pane>* {
